added inputmode numeric

--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
 
   <main>
     <p>Norsk skriftlig:</p>
-    <input type="text" class="fag-input" id="norsk-s"> <br>
+    <input type="text" class="fag-input" id="norsk-s" inputmode="numeric"> <br>
 
     <p>Norsk muntlig:</p>
-    <input type="text" class="fag-input" id="norsk-m"> <br>
+    <input type="text" class="fag-input" id="norsk-m" inputmode="numeric"> <br>
 
     <p>Matematikk:</p>
-    <input type="text" class="fag-input" id="matematikk"> <br>
+    <input type="text" class="fag-input" id="matematikk" inputmode="numeric"> <br>
 
     <p>Engelsk:</p>
-    <input type="text" class="fag-input" id="engelsk"> <br>
+    <input type="text" class="fag-input" id="engelsk" inputmode="numeric"> <br>
 
     <p>KRLE:</p>
-    <input type="text" class="fag-input" id="krle"> <br>
+    <input type="text" class="fag-input" id="krle" inputmode="numeric"> <br>
 
     <p>Samfunnsfag:</p>
-    <input type="text" class="fag-input" id="samfunnsfag"> <br>
+    <input type="text" class="fag-input" id="samfunnsfag" inputmode="numeric"> <br>
 
     <p>Naturfag:</p>
-    <input type="text" class="fag-input" id="naturfag"> <br>
+    <input type="text" class="fag-input" id="naturfag" inputmode="numeric"> <br>
 
     <p>Kroppsøving:</p>
-    <input type="text" class="fag-input" id="kroppsoving"> <br>
+    <input type="text" class="fag-input" id="kroppsoving" inputmode="numeric"> <br>
 
     <p>Kunst & håndverk:</p>
-    <input type="text" class="fag-input" id="kunst-handverk"> <br>
+    <input type="text" class="fag-input" id="kunst-handverk" inputmode="numeric"> <br>
 
     <p>Mat & helse</p>
-    <input type="text" class="fag-input" id="mat-helse"> <br>
+    <input type="text" class="fag-input" id="mat-helse" inputmode="numeric"> <br>
 
     <p>Musikk</p>
-    <input type="text" class="fag-input" id="musikk"> <br>
+    <input type="text" class="fag-input" id="musikk" inputmode="numeric"> <br>
 
     <p>Valgspråk (f.eks. spansk):</p>
-    <input type="text" class="fag-input" id="valg-sprak"> <br>
+    <input type="text" class="fag-input" id="valg-sprak" inputmode="numeric"> <br>
 
     <p>Valgfag (f.eks. medier og kommunikasjon):</p>
-    <input type="text" class="fag-input" id="valg-fag"> <br>
+    <input type="text" class="fag-input" id="valg-fag" inputmode="numeric"> <br>
 
     <h1 id="snittSentence" class="hidden">Snittet ditt er: <span id="snittShow"></span></h1>
 
