--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
     <h1 id="snittSentence" class="hidden">Snittet ditt er: <span id="snittShow"></span></h1>
 
     <button id="sjekkSnitt">Få snitt</button>
+    <div id="settKarakterer-div">
+      <h3>Sett alle karakterene til...</h3>
+      <input type="number" inputmode="numeric" id="settAlleKarakterer">
+      <button id="settAlleKarakterer-knapp">Sett karakterer</button>
+    </div>
   </main>
   <script src="./index.js"></script>
 </body>
